menu bar items get selected on mouse over and block all keyboard shortcut until alt or the toolbar item is pressed
Categories
(Firefox :: Menus, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox109 | --- | unaffected |
| firefox110 | + | verified |
| firefox111 | --- | verified |
People
(Reporter: sajicek, Assigned: emilio)
References
(Regression)
Details
(Keywords: nightly-community, regression)
Attachments
(2 files)
|
1.21 MB,
video/mp4
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64; rv:109.0) Gecko/20100101 Firefox/110.0
Steps to reproduce:
(I've confirmed this in a fresh profile, video of the behaviour, and a correct behaviour from previous version is attached)
When you have the "menu bar" enabled (the one with File, Edit, View etc) move your mouse over any of them, don't click, just move the mouse over it, then move it anywhere else, again without clicking it.
Actual results:
The item you hovered on will be lit as if you were still hovering over it, and no firefox keyboard shortcuts will work (ctrl + t, ctrl + shift + p etc) and all key inputs will be interpreted as if you really are focused on the menu bar (left and right arrows will move you left and right on the menu bar items, down arrow will open the curently selected item etc) until you either press the alt key (which does normaly focus / defocus the menu bar) to defocus the bar, or click anywhere else in any window (this is new in 110.0b3, previously in 110.0b2 the only way was to click any menu item).
Expected results:
The focus should happen on mouse over, but when the mouse leaves, it should defocus it (as it was before and should still be, based on normal Windows window behaviour)
Comment 1•3 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Firefox::Menus' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 2•3 years ago
|
||
[Tracking Requested - why for this release]:Menu hover state is broken due to regression from Bug 1805414
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=0c989b2bcd7882a9e7106e7879ab8933c2e09071&tochange=47c002d3637247e71ee901f32421deaecc9d8ea3
Comment 3•3 years ago
|
||
:emilio, since you are the author of the regressor, bug 1805414, could you take a look? Also, could you set the severity field?
For more information, please visit auto_nag documentation.
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 4•3 years ago
|
||
Updated•3 years ago
|
Updated•3 years ago
|
Comment 6•3 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 8•3 years ago
|
||
Comment on attachment 9313321 [details]
Bug 1811466 - Restore menubar activation behavior from before bug 1811466. r=smaug
Beta/Release Uplift Approval Request
- User impact if declined: comment 0
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Very targeted fix.
- String changes made/needed: none
- Is Android affected?: No
| Assignee | ||
Updated•3 years ago
|
Comment 9•3 years ago
|
||
Comment on attachment 9313321 [details]
Bug 1811466 - Restore menubar activation behavior from before bug 1811466. r=smaug
Approved for 110 beta 8, thanks.
Comment 10•3 years ago
|
||
| bugherder uplift | ||
Updated•3 years ago
|
Comment 11•3 years ago
|
||
Reproduced this issue on an affected Nightly build from 2023-01-20 ON Win 10, using the STR from Comment 0.
Verified as fixed on Firefox 111.0a1 (20230131093335) and 110.0b8 (treeherder build - 20230130164457) on Windows 10 and Ubuntu 22.04.
I have verified this issue on Ubuntu with Light and Dark theme enabled. System theme does not have a visible hover effect on the menu bar items and for this issue I have filled Bug 1814079.
Description
•