Bug 1811466 - Restore menubar activation behavior from before bug 1811466. r=smaug a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D167417